[package]
name = "rsomics-bed-merge"
version = "0.2.0"
description = "Merge overlapping BED intervals — bedtools merge equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bed-merge"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bed", "merge", "bedtools", "bioinformatics", "intervals"]

[[bin]]
name = "rsomics-bed-merge"
path = "src/main.rs"

[lib]
name = "rsomics_bed_merge"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-intervals = { version = "0.1" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
[[bench]]
name = "bench"
harness = false
